[gd_scene load_steps=71 format=3 uid="uid://b28qtdgpgwah2"]

[ext_resource type="Script" uid="uid://if3xtcqk05xe" path="res://Player/player.gd" id="1_ihejy"]
[ext_resource type="PackedScene" uid="uid://bq6fn7pvlhc5b" path="res://Player/ghost.tscn" id="2_yc8pk"]
[ext_resource type="AudioStream" uid="uid://ci7v1myhwxlb4" path="res://assets/sounds/Bleep_01.wav" id="3_j3wwl"]
[ext_resource type="AudioStream" uid="uid://cfuwoee4wbnvy" path="res://assets/sounds/Bleep_04.wav" id="3_jrfsn"]
[ext_resource type="Texture2D" uid="uid://c4764c8bg4e78" path="res://assets/spritesheets/doggy_spritesheet.png" id="8_od3ui"]

[sub_resource type="Animation" id="Animation_k53q1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [30]
}

[sub_resource type="Animation" id="Animation_fhl08"]
resource_name = "run"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [45, 46, 47, 48]
}

[sub_resource type="Animation" id="Animation_vtle1"]
resource_name = "idle_start"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 5]
}

[sub_resource type="Animation" id="Animation_od3ui"]
resource_name = "idle_sleep"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14]
}

[sub_resource type="Animation" id="Animation_00tjw"]
resource_name = "jump"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [15, 16, 17]
}

[sub_resource type="Animation" id="Animation_x3vf3"]
resource_name = "fall"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [18, 19]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_apopc"]
_data = {
&"RESET": SubResource("Animation_k53q1"),
&"fall": SubResource("Animation_x3vf3"),
&"idle_sleep": SubResource("Animation_od3ui"),
&"idle_start": SubResource("Animation_vtle1"),
&"jump": SubResource("Animation_00tjw"),
&"run": SubResource("Animation_fhl08")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5htga"]
animation = &"idle_start"

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_p5o4e"]
graph_offset = Vector2(-845, 123.4)
nodes/Animation/node = SubResource("AnimationNodeAnimation_5htga")
nodes/Animation/position = Vector2(-220, 180)
node_connections = [&"output", 0, &"Animation"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gu6f8"]
animation = &"RESET"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dkpta"]
animation = &"fall"

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_lfmf2"]
nodes/Animation/node = SubResource("AnimationNodeAnimation_dkpta")
nodes/Animation/position = Vector2(340, 80)
nodes/output/position = Vector2(660, 100)
node_connections = [&"output", 0, &"Animation"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pisgm"]
animation = &"idle_sleep"

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_b1ygp"]
graph_offset = Vector2(-644, 37)
nodes/Animation/node = SubResource("AnimationNodeAnimation_pisgm")
nodes/Animation/position = Vector2(20, 120)
node_connections = [&"output", 0, &"Animation"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_o28un"]
animation = &"jump"

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_n471f"]
nodes/Animation/node = SubResource("AnimationNodeAnimation_o28un")
nodes/Animation/position = Vector2(340, 100)
nodes/output/position = Vector2(800, 120)
node_connections = [&"output", 0, &"Animation"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7emwf"]
animation = &"run"

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_hshwv"]
graph_offset = Vector2(-113, 1)
nodes/Animation/node = SubResource("AnimationNodeAnimation_7emwf")
nodes/Animation/position = Vector2(460, 80)
nodes/output/position = Vector2(840, 80)
node_connections = [&"output", 0, &"Animation"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gpjlu"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8mwp6"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qemgg"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8viyr"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sm0op"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_76lrf"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_efx54"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_755ss"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bbimk"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_m0h3t"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_i4o1l"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j2n6q"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_c6x0f"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_jp1hh"]
states/Idle/node = SubResource("AnimationNodeBlendTree_p5o4e")
states/Idle/position = Vector2(360, 144)
states/RESET/node = SubResource("AnimationNodeAnimation_gu6f8")
states/RESET/position = Vector2(171, 144)
states/Start/position = Vector2(10, 144)
states/fall/node = SubResource("AnimationNodeBlendTree_lfmf2")
states/fall/position = Vector2(744, 62)
states/idle_sleep/node = SubResource("AnimationNodeBlendTree_b1ygp")
states/idle_sleep/position = Vector2(360, -30)
states/jump/node = SubResource("AnimationNodeBlendTree_n471f")
states/jump/position = Vector2(602, 144)
states/run/node = SubResource("AnimationNodeBlendTree_hshwv")
states/run/position = Vector2(602, -30)
transitions = ["Start", "RESET", SubResource("AnimationNodeStateMachineTransition_gpjlu"), "RESET", "Idle", SubResource("AnimationNodeStateMachineTransition_8mwp6"), "Idle", "run", SubResource("AnimationNodeStateMachineTransition_qemgg"), "Idle", "jump", SubResource("AnimationNodeStateMachineTransition_8viyr"), "run", "jump", SubResource("AnimationNodeStateMachineTransition_sm0op"), "run", "fall", SubResource("AnimationNodeStateMachineTransition_76lrf"), "run", "Idle", SubResource("AnimationNodeStateMachineTransition_efx54"), "fall", "run", SubResource("AnimationNodeStateMachineTransition_755ss"), "jump", "fall", SubResource("AnimationNodeStateMachineTransition_bbimk"), "Idle", "idle_sleep", SubResource("AnimationNodeStateMachineTransition_m0h3t"), "idle_sleep", "run", SubResource("AnimationNodeStateMachineTransition_i4o1l"), "idle_sleep", "jump", SubResource("AnimationNodeStateMachineTransition_j2n6q"), "Idle", "RESET", SubResource("AnimationNodeStateMachineTransition_c6x0f")]
graph_offset = Vector2(-489, -91)

[sub_resource type="AtlasTexture" id="AtlasTexture_apopc"]
atlas = ExtResource("8_od3ui")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_00tjw"]
atlas = ExtResource("8_od3ui")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_od3ui"]
atlas = ExtResource("8_od3ui")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3vf3"]
atlas = ExtResource("8_od3ui")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5htga"]
atlas = ExtResource("8_od3ui")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5o4e"]
atlas = ExtResource("8_od3ui")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu6f8"]
atlas = ExtResource("8_od3ui")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkpta"]
atlas = ExtResource("8_od3ui")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfmf2"]
atlas = ExtResource("8_od3ui")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pisgm"]
atlas = ExtResource("8_od3ui")
region = Rect2(80, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1ygp"]
atlas = ExtResource("8_od3ui")
region = Rect2(96, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o28un"]
atlas = ExtResource("8_od3ui")
region = Rect2(112, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n471f"]
atlas = ExtResource("8_od3ui")
region = Rect2(128, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7emwf"]
atlas = ExtResource("8_od3ui")
region = Rect2(144, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hshwv"]
atlas = ExtResource("8_od3ui")
region = Rect2(160, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpjlu"]
atlas = ExtResource("8_od3ui")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mwp6"]
atlas = ExtResource("8_od3ui")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qemgg"]
atlas = ExtResource("8_od3ui")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8viyr"]
atlas = ExtResource("8_od3ui")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm0op"]
atlas = ExtResource("8_od3ui")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_76lrf"]
atlas = ExtResource("8_od3ui")
region = Rect2(80, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_efx54"]
atlas = ExtResource("8_od3ui")
region = Rect2(80, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_755ss"]
atlas = ExtResource("8_od3ui")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbimk"]
atlas = ExtResource("8_od3ui")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0h3t"]
atlas = ExtResource("8_od3ui")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4o1l"]
atlas = ExtResource("8_od3ui")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2n6q"]
atlas = ExtResource("8_od3ui")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6x0f"]
atlas = ExtResource("8_od3ui")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jp1hh"]
atlas = ExtResource("8_od3ui")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qs4pp"]
atlas = ExtResource("8_od3ui")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iyprq"]
atlas = ExtResource("8_od3ui")
region = Rect2(48, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_8mwp6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_apopc")
}],
"loop": true,
"name": &"damage",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_00tjw")
}, {
"duration": 100.0,
"texture": SubResource("AtlasTexture_od3ui")
}],
"loop": false,
"name": &"fall",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3vf3")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_apopc")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5htga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5o4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu6f8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkpta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfmf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pisgm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1ygp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o28un")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n471f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7emwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hshwv")
}],
"loop": true,
"name": &"rotate_full",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpjlu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mwp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qemgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8viyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm0op")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76lrf")
}],
"loop": false,
"name": &"rotate_l_to_r",
"speed": 40.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_efx54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_755ss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbimk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0h3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4o1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2n6q")
}],
"loop": false,
"name": &"rotate_r_to_l",
"speed": 40.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6x0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jp1hh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qs4pp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyprq")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cqank"]
radius = 3.0
height = 9.0

[node name="CharacterBody2D" type="CharacterBody2D"]
scale = Vector2(2, 2)
collision_mask = 3
script = ExtResource("1_ihejy")
ghost_node = ExtResource("2_yc8pk")
metadata/isPlayer = true

[node name="Animation" type="Node" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Animation"]
position = Vector2(0, -2)
scale = Vector2(2, 2)
texture = ExtResource("8_od3ui")
hframes = 15
vframes = 4
frame = 30

[node name="AnimationPlayer" type="AnimationPlayer" parent="Animation"]
libraries = {
&"": SubResource("AnimationLibrary_apopc")
}

[node name="AnimationTree" type="AnimationTree" parent="Animation"]
tree_root = SubResource("AnimationNodeStateMachine_jp1hh")
anim_player = NodePath("../AnimationPlayer")

[node name="AnimatedSprite2D_doggy" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, -1)
sprite_frames = SubResource("SpriteFrames_8mwp6")
animation = &"damage"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.5708
shape = SubResource("CapsuleShape2D_cqank")

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_jrfsn")
pitch_scale = 0.28
bus = &"SFX"

[node name="DamageSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_j3wwl")
pitch_scale = 0.5
bus = &"SFX"

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(-5, 0)

[node name="GhostTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[connection signal="animation_changed" from="AnimatedSprite2D_doggy" to="." method="_on_animated_sprite_2d_doggy_animation_changed"]
[connection signal="animation_finished" from="AnimatedSprite2D_doggy" to="." method="_on_animated_sprite_2d_doggy_animation_finished"]
[connection signal="timeout" from="GhostTimer" to="." method="_on_ghost_timer_timeout"]
[connection signal="timeout" from="JumpBufferTimer" to="." method="_on_jump_buffer_timer_timeout"]
